--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,11 @@
-version: '1.0.1-{branch}.{build}'
+version: '1.0.1-{build}'
 
 pull_requests:
   do_not_increment_build_number: true
 
 configuration: Release
+
+skip_tags: true
 
 assembly_info:
   patch: true
